--- a/src/main/resources/assets/funkylocomotion/lang/en_US.lang
+++ b/src/main/resources/assets/funkylocomotion/lang/en_US.lang
@@ -16,3 +16,4 @@ itemGroup.funkylocomotion=Funky Locomotion
 tile.funkylocomotion:frame.name=Frame Block
 tile.funkylocomotion:pusher.0.name=Frame Pusher
 tile.funkylocomotion:pusher.6.name=Frame Puller
+tile.funkylocomotion:slider.name=Frame Slider
