--- a/src/main/resources/assets/funkylocomotion/lang/en_US.lang
+++ b/src/main/resources/assets/funkylocomotion/lang/en_US.lang
@@ -11,6 +11,9 @@ frame.dir.abbreviations.2=N
 frame.dir.abbreviations.3=S
 frame.dir.abbreviations.4=W
 frame.dir.abbreviations.5=E
+frame.teleport.id=Teleporter ID
+frame.teleport.no_id.0=Teleporter doesn't have an ID
+frame.teleport.no_id.1=Craft with a second teleporter to assign one
 item.funkylocomotion:wrench.name=Wrench
 item.funkylocomotion:wrench_eye.name=iWrench
 itemGroup.funkylocomotion=Funky Locomotion
@@ -19,3 +22,4 @@ tile.funkylocomotion:pusher.0.name=Frame Pusher
 tile.funkylocomotion:pusher.6.name=Frame Puller
 tile.funkylocomotion:slider.name=Frame Slider
 tile.funkylocomotion:booster.name=Frame Booster
+tile.funkylocomotion:teleporter.name=Frame Teleporter
