--- a/src/main/resources/assets/funkylocomotion/lang/en_US.lang
+++ b/src/main/resources/assets/funkylocomotion/lang/en_US.lang
@@ -1,3 +1,10 @@
+frame.mass.err.axis=Corner block connects to edges on two opposite sides (%s axis)
+frame.mass.err.corner=Corner block does not connect to 3 edge blocks
+frame.mass.err.nomatchingcorner=Expecting corner or edge block at %s
+frame.mass.err.nocornerfound=Expecting corner block at position %s
+frame.mass.err.noedgefound=Expecting edge block at position %s
+frame.mass.err.toolong=Super-frame edge on side %s is too long (max: %s)
+frame.mass.success=Successfully formed super frame (%s x %s x %s)
 frame.dir.start=Closed on Sides:
 frame.dir.name.0=Bottom
 frame.dir.name.1=Top
@@ -25,5 +32,7 @@ tile.funkylocomotion:slider.name=Frame Slider
 tile.funkylocomotion:booster.name=Frame Booster
 tile.funkylocomotion:teleporter.name=Frame Teleporter
 tile.funkylocomotion:frame_projector.name=Frame Projector
+tile.funkylocomotion:mass_frame_corner.name=Super-Frame Corner
+tile.funkylocomotion:mass_frame_edge.name=Super-Frame Edge
 tooltip.funkylocomotion:wrench_eye=When held, shows frame block obstructions
 tooltip.funkylocomotion:wrench_hammer=Wrenches frame blocks in a 5x5 area
